--- a/1-plan_picker/styles.css
+++ b/1-plan_picker/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --blue: #298bac;
+  --blue: rgb(100, 28, 213);
   font-size: 16px;
 }
 
@@ -16,7 +16,49 @@ html {
 body {
   margin: 0;
   height: 100%;
-  background: var(--blue);
+  background: linear-gradient(
+      161deg,
+      rgba(117, 117, 117, 0.03) 0%,
+      rgba(117, 117, 117, 0.03) 50%,
+      rgba(8, 8, 8, 0.03) 50%,
+      rgba(8, 8, 8, 0.03) 100%
+    ),
+    linear-gradient(
+      59deg,
+      rgba(245, 245, 245, 0.05) 0%,
+      rgba(245, 245, 245, 0.05) 50%,
+      rgba(68, 68, 68, 0.05) 50%,
+      rgba(68, 68, 68, 0.05) 100%
+    ),
+    linear-gradient(
+      286deg,
+      rgba(107, 107, 107, 0.07) 0%,
+      rgba(107, 107, 107, 0.07) 50%,
+      rgba(7, 7, 7, 0.07) 50%,
+      rgba(7, 7, 7, 0.07) 100%
+    ),
+    linear-gradient(
+      123deg,
+      rgba(9, 9, 9, 0.09) 0%,
+      rgba(9, 9, 9, 0.09) 50%,
+      rgba(120, 120, 120, 0.09) 50%,
+      rgba(120, 120, 120, 0.09) 100%
+    ),
+    linear-gradient(
+      170deg,
+      rgba(202, 202, 202, 0.01) 0%,
+      rgba(202, 202, 202, 0.01) 50%,
+      rgba(19, 19, 19, 0.01) 50%,
+      rgba(19, 19, 19, 0.01) 100%
+    ),
+    linear-gradient(
+      210deg,
+      rgba(64, 64, 64, 0.04) 0%,
+      rgba(64, 64, 64, 0.04) 50%,
+      rgba(4, 4, 4, 0.04) 50%,
+      rgba(4, 4, 4, 0.04) 100%
+    ),
+    linear-gradient(90deg, rgb(249, 17, 190), rgb(100, 28, 213));
   font-family: 'Roboto', sans-serif;
   display: flex;
   flex-direction: column;
