--- a/1-plan_picker/styles.css
+++ b/1-plan_picker/styles.css
@@ -15,7 +15,7 @@ html {
 
 body {
   margin: 0;
-  height: 100%;
+  min-height: 100%;
   background: linear-gradient(
       161deg,
       rgba(117, 117, 117, 0.03) 0%,
