--- a/2-payment_method/styles.css
+++ b/2-payment_method/styles.css
@@ -15,7 +15,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  height: 100%;
+  min-height: 100%;
   background: linear-gradient(
       158deg,
       rgba(84, 84, 84, 0.03) 0%,
@@ -284,19 +284,10 @@ button .flex {
   background: var(--colour-green);
 }
 
-/* footer */
-
-footer {
-  margin-top: 5rem;
-  font-size: 0.8rem;
-  padding: 1rem;
-  max-width: 500px;
-  font-weight: 700;
-  color: #363636;
-}
-
-footer a {
-  color: var(--colour-blue);
+@media (max-width: 450px) {
+  body {
+    -webkit-box-pack: start;
+    justify-content: flex-start;
 }
 
 footer a:hover {
