--- a/2-payment_method/styles.css
+++ b/2-payment_method/styles.css
@@ -154,6 +154,7 @@ body {
 }
 
 section.payment-method {
+  margin-top: 1rem;
   max-width: 270px;
   background: #fff;
   box-shadow: 0px 14px 25px 0px rgba(0, 0, 0, 0.42);
@@ -288,8 +289,5 @@ button .flex {
   body {
     -webkit-box-pack: start;
     justify-content: flex-start;
-}
-
-footer a:hover {
-  color: var(--colour-green);
+  }
 }
